[project]
name = "crypto-rss-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "feedparser>=6.0.11",
    "html2text>=2025.4.15",
    "mcp[cli]>=1.6.0",
    "opml>=0.5",
]

[project.scripts]
crypto-rss-mcp = "crypto_rss_mcp.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
